add more depends for pipeline

--- a/development-branch/codefresh.yml
+++ b/development-branch/codefresh.yml
@@ -5,13 +5,14 @@ steps:
     image: codefresh/cfstep-helm:2.9.1
     working_directory: development-branch/
     commands:
+      - apk add --no-cache ruby make bash
       - make helm/release-all
 
   gather_deps:
     image: codefresh/cfstep-helm:2.9.1
     working_directory: development-branch/
     commands:
-      - apk add --no-cache ruby
+      - apk add --no-cache ruby make bash
       - make helm/update-reqs
 
   deploy:
