--- a/development-branch/codefresh.yml
+++ b/development-branch/codefresh.yml
@@ -9,7 +9,8 @@ steps:
       - HELM_HOME=${{CF_VOLUME_PATH}}/.helm
     commands:
       - apk add --no-cache ruby make bash git
-      - mv /root/.helm $HELM_HOME
+      - helm init --client-only
+      - helm plugin install https://github.com/chartmuseum/helm-push.git
       - export HELM_REPO_ACCESS_TOKEN=$CF_API_KEY
       - export HELM_REPO_AUTH_HEADER=x-access-token
       - helm repo add codefresh $CF_CTX_CF_HELM_DEFAULT_URL
