--- a/development-branch/codefresh.yml
+++ b/development-branch/codefresh.yml
@@ -9,6 +9,7 @@ steps:
       - HELM_HOME=${{CF_VOLUME_PATH}}/.helm
     commands:
       - apk add --no-cache ruby make bash git
+      - rm -rf $HELM_HOME
       - helm init --client-only
       - helm plugin install https://github.com/chartmuseum/helm-push.git
       - export HELM_REPO_ACCESS_TOKEN=$CF_API_KEY
