--- a/development-branch/codefresh.yml
+++ b/development-branch/codefresh.yml
@@ -44,9 +44,6 @@ steps:
     environment:
       - GIT_BRANCH=${{CF_BRANCH}}
       - HELM_HOME=${{CF_VOLUME_PATH}}/.helm
-      - CHART_REF=.
+      - CHART_REF=development-branch
       - VALUESFILE_overrides=override-values.yaml
       - RELEASE_NAME=development-branch-example
-    commands:
-      - unset CF_CTX_CF_HELM_DEFAULT_URL
-      - /opt/bin/release_chart
