--- a/development-branch/codefresh.yml
+++ b/development-branch/codefresh.yml
@@ -38,12 +38,22 @@ steps:
       - export HELM_REPO_ACCESS_TOKEN=$CF_API_KEY HELM_REPO_AUTH_HEADER=x-access-token
       - make helm/gather-deps
 
+  export_helm_deploy_vars:
+    image: codefresh/cfstep-helm:2.9.1
+    working_directory: development-branch/
+    environment:
+      - GIT_BRANCH=${{CF_BRANCH}}
+      - HELM_HOME=${{CF_VOLUME_PATH}}/.helm
+    commands:
+      - export VERSION="$(cat Chart.yaml | grep 'version:' | awk '{print $2}')"
+      - export SUFFIX=$([ "$GIT_BRANCH" == "master" ] || echo "-$GIT_BRANCH")
+      - cf_export CHART_VERSION="${VERSION}${SUFFIX}"
+      - cf_export RELEASE_NAME=development-branch-${{CF_BRANCH}}
+
   deploy:
     image: codefresh/cfstep-helm:2.9.1
     working_directory: development-branch/
     environment:
       - GIT_BRANCH=${{CF_BRANCH}}
       - HELM_HOME=${{CF_VOLUME_PATH}}/.helm
-      - CHART_REF=development-branch
       - VALUESFILE_overrides=override-values.yaml
-      - RELEASE_NAME=development-branch-example
